# Stella

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest_output.txt
.remember/: remember.md
docs/: COMO_USAR.md  conteudo-v2-F2-codex.md  reforma-fabrica-codex.md
docs/plans/: 2026-05-29-notebooklm-referencia.md  2026-06-21-radar-tendencias-design.md  2026-06-21-radar-tendencias-plano.md
docs/tasks/: codex-corpo-daemon.md  codex-corpo-gravador.md
scripts/: enviar_amostras_voz.py
scripts/windows/: README.md  stella-radar.ps1  stella-run-hidden.vbs
stella/: app.py
stella/agents/: __init__.py
stella/corpo/: __init__.py  centralizar_conteudo.py  daemon_telegram.py  ear_prompter.py  gravador.py  lembretes.py  manifesto_materiais.py  manychat.py  persona_carrossel.py  publicar_material.py  radar.py  radar_drops.py  seguranca.py  voz.py
stella/domain/: agente.py  conexao_mcp.py  decisao.py  enums.py  memoria.py  pacote_conteudo.py  post.py  registro_keywords.py  skill.py  tarefa.py
stella/framework/: README.md  __init__.py  agent.py  builder.py  client.py  errors.py  manifest.py  rag.py  registry.py  sandbox.py  scheduling.py  skills_editor.py  tracking.py
stella/frontends/: cli.py
stella/infra/: config.py  logging.py  usage_tracker.py
stella/prompts/: contexto_dinamico.md  formato_respostas.md  identidade.md  politica_autonomia.md  prompt_builder.py  tom_jarvis.md
stella/usecases/: atualizar_memoria.py  base.py  capturar_ideia.py  responder_projeto.py
tests/: conftest.py  test_app.py  test_smoke.py
(+232 files in other folders)
