[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stella"
version = "0.1.0"
description = "Stella — assistente pessoal local do Bruno (Fase 1 MVP)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-frontmatter>=1.1",
    "portalocker>=2.8",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
stella = "stella.frontends.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["stella"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -m 'not live'"
markers = [
    "live: testes que chamam APIs reais (opt-in, exige .env com chaves)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, etc)
    "I",   # isort (import ordering)
    "B",   # bugbear (common bugs)
    "UP",  # pyupgrade (modernização sintática)
]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
plugins = ["pydantic.mypy"]
